python console utf-8 problem #30777

Closed
opened 2012-04-02 18:25:56 +02:00 by Dalai Felinto · 5 comments

%%%1) write (copy+paste) the char Ы to the python console.
2) backspace to delete it

Two problems here:
a) after (1) blender shows an extra space after the input character.
b) after (2) blender shows a strange char (D with a middle stroke).

*) extra, the console doesn't allow input of ' or " from a latin keyboard (nor accented chars). For the text editor this is fixed with the XIM patch ([#30274]). For python console not even with it.

Blender 2.6
confirmed on linux and osx%%%

%%%1) write (copy+paste) the char Ы to the python console. 2) backspace to delete it Two problems here: a) after (1) blender shows an extra space after the input character. b) after (2) blender shows a strange char (D with a middle stroke). *) extra, the console doesn't allow input of ' or " from a latin keyboard (nor accented chars). For the text editor this is fixed with the XIM patch ([#30274]). For python console not even with it. Blender 2.6 confirmed on linux and osx%%%
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed backspace/del issue with multi-byte chars.

full unicode support for console is more work, selection, cursor drawing, wrapping etc needs to be updated for this.

this is really a todo item. IMHO.%%%

%%%fixed backspace/del issue with multi-byte chars. full unicode support for console is more work, selection, cursor drawing, wrapping etc needs to be updated for this. this is really a todo item. IMHO.%%%
%%%set as a TODO: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#Console closing.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

%%%This problem has been resolved in the v2.67 release, so I removed the corresponding ToDo item.%%%

%%%This problem has been resolved in the v2.67 release, so I removed the corresponding ToDo item.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30777
No description provided.