partial fix [#30777] python console utf-8 problem

backspace/del now doesn't split up multi-byte characters.
Ctlr+Backspace/Del now work for deleting whole words.